@@ -1,3 +1,8 @@
+2000-09-04  Katsumi Yamaoka   <yamaoka@jpl.org>
+
+	* mu-cite.el (mu-cite-default-methods-alist): Don't include
+	`ml-count' in `id' if it is not available.
+
 2000-05-25  Tanaka Akira      <akr@m17n.org>
 
 	* README.en: Update for CVS via SSH.
